<resources>
    <string name="app_name">IPF Community</string>
    <string name="title">THE INDUSTRIAL\nAND PLANNING\nFORUM.</string>
    <string name="n_e_x_t">N E X T</string>
    <string name="join_the_ipf_family">JOIN THE IPF FAMILY</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="feed">FEED</string>
    <string name="contacts">CONTACTS</string>
    <string name="profile">PROFILE</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>